--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
  
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Mustache Template engine
+spring.mustache.prefix=classpath:/templates/
+spring.mustache.suffix=.html
